[gd_scene load_steps=2 format=3 uid="uid://main_menu_001"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ECHOES OF MEMORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "A world that changes - but you remember"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New World (Random Seed)"

[node name="SeedInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter seed (optional)"

[node name="StartWithSeedButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start with Seed"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="DiaryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Memory Diary"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Stats" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 720.0
grow_vertical = 0
text = "Total Runs: 0
Victories: 0
Highest Level: 1"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/StartWithSeedButton" to="." method="_on_start_with_seed_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/DiaryButton" to="." method="_on_diary_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_pressed"]
